--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 
 paginate: 10 # pagination based on number of posts
 paginate_path: "page:num"
-exclude: ["README.md"] # files to exclude
+exclude: ["README.md", "Gemfile"] # files to exclude
 pygments: true
 markdown: kramdown
 
