增加作者信息

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,10 @@ author:
   bitbucket: qforce
   email: yangbo@qifun.com
   github: qifun
+  name: 小报
+  url: "http://qforce.qifun.com/newspaper"
+  bio: 岂凡技术小报
+  email_md5: 50993397b1b5ed2eae8e50e25d9663e8 
 
 rss_path: feed.xml
 categories_path: categories.html
