--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ defaults:
     values:
       title: 岂凡技术小报
 
-title: 岂凡技术小报
+title: 小报
 description: 做真正有趣的游戏<br/>向所有玩家传播快乐
 author:
   bitbucket: qforce
